<resources>
    <string name="app_name">Quizly</string>
    <string name="isn_t_life_a_collection_of_weird_quizzers_with_n_no_answers_to_have_half_the_questions">Isn\'t life a collection of weird quizzers with \n no answers to have half the questions</string>
    <string name="welcome_to_quizly">Welcome to Quizly</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="todo_1">TODO</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue_using_app">Please login to continue using app</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="stay_connected">Stay Connected</string>
    <string name="enter_your_email_address_and_password_to_get_access_to_your_account">Enter your email address and password to get access to your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="welcome">Welcome</string>
    <string name="image">image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">RESULT</string>
    <string name="image1">image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="personal_details">Personal Details</string>
    <string name="please_enter_details_to_continue_using_app">Please enter details to continue using app.</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="age">Age</string>
</resources>